--- a/_config.yml
+++ b/_config.yml
@@ -6,8 +6,8 @@ url: http://yuanyong.org
 
 # Owner/author information
 owner:
-  name:           Jason Ansel
-  avatar:         jasonansel.jpg
+  name:           Yong Yuan
+  avatar:         YongYuan.png
 #  bio:
   email:          yongyuanstu@gmail.com
   # Social networking links are used in author-bio sidebar. Update and remove as you like.
