--- a/_config.yml
+++ b/_config.yml
@@ -37,8 +37,8 @@ links:
     url: /publications/
   - title: Blog
     url: /blog/
-  - title: Vitae
-    url: /vitae/	
+  - title: Resume
+    url: http://yuanyong.org/resume/	
   - title: Experience
     url: /experience/
   - title: Hobbies
