--- a/_config.yml
+++ b/_config.yml
@@ -38,7 +38,7 @@ links:
   - title: Blog
     url: /blog/
   - title: Resume
-    url: http://yuanyong.org/resume/	
+    url: /resume/	
   - title: Experience
     url: /experience/
   - title: Hobbies
