--- a/_config.yml
+++ b/_config.yml
@@ -1,4 +1,4 @@
-title: Yong Yuan
+title: Yong Yuan's Homepage
 #tagline:          A short tagline
 #description:      Describe your website.
 #Comment out url when working locally to resolve base urls correctly
