add wiki and update config

--- a/_config.yml
+++ b/_config.yml
@@ -1,6 +1,6 @@
 title: Yong Yuan's Homepage
-#tagline:          A short tagline
-#description:      Describe your website.
+tagline:          Yong Yuan
+description:      This is Yong Yuan's homgpage.
 #Comment out url when working locally to resolve base urls correctly
 url: http://yuanyong.org
 
@@ -43,7 +43,8 @@ links:
     url: /experience/
   - title: Hobbies
     url: /hobbies/
-
+  - title: Wiki
+    url: /wiki/
 # http://en.wikipedia.org/wiki/List_of_tz_database_time_zones
 timezone: Asia/Chongqing
 future: true
